[tool.poetry]
name = "file-system-api"
version = "0.1.0"
description = ""
authors = ["Arthur Antunes <arthur.antunes.aa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flasgger = "^0.9.5"
peewee = "^3.15.3"
Flask-RESTful = "^0.3.9"
boto3 = "^1.24.85"
python-dotenv = "^0.21.0"
flask-unittest = "^0.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
